--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
-    "axios": "^1.3.4",
+    "@types/axios": "^0.14.0",
+    "axios": "^1.3.6",
+    "mobx": "^6.9.0",
+    "mobx-react-lite": "^3.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
